src/style.css
@import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Finlandica:ital,wght@0,400..700;1,400..700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&display=swap");

@font-face {
    font-family: "NerdFontsSymbols Nerd Font";
    src: url("www.nerdfonts.com/assets/fonts/Symbols-2048-em Nerd Font Complete v233.woff2")
        format("woff2") !important;
    font-weight: normal;
    font-style: normal;
}

.nocss {
    display: none;
}

html {
    /* --pagecol: rgba(0, 136, 255, 1); */
    color: #fff;
    font-family: "Atkinson Hyperlegible";
    scroll-behavior: smooth;
    background-color: #0086ff;
    width: 100vw;
    height: 100vh;
    background: url(./jump.png);
    background-blend-mode:
        hue, saturation, overlay, overlay, soft-light, overlay, normal;
    /* transition: background 0.4s ease, background-color 0.4s ease; */
    transition: background-image 0.4s ease;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
}

html::after {
    content: "";
    position: fixed;
    inset: 0;
    background: var(--pagecol);
    mix-blend-mode: hue;
    transition: background 1s ease;
    z-index: 2;
    pointer-events: none;
    opacity: 0.5;
}

nf {
    font-family: "NerdFontsSymbols Nerd Font";
    font-size: inherit;
}

.logo svg path {
    fill: white !important;
}

body {
    /* height: calc(100% - 8px); */
    z-index: 3;
    /* Slide 16:9 - 8 */

    /* Auto layout */
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    padding: 0px;
    position: relative;
    overflow: scroll;
}

.sidebar {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    padding: 55px 30px;
    gap: 20px;
    width: 255px;
    flex: none;
    order: 0;
    align-self: stretch;
    flex-grow: 0;

    z-index: 3;
    overflow-y: scroll;
    position: sticky;
    overflow: visible;
}

#content {
    /* Auto layout */
    display: flex;
    flex-direction: column;
    align-items: start;
    margin: 40px 0px;
    gap: 20px;
    width: 985px;

    /* Inside auto layout */
    flex: none;
    order: 1;
    align-self: stretch;
    flex-grow: 0;
    margin-right: 255px;

    /* Frame 34587976 */
    box-sizing: border-box;
    padding: 20px;
    gap: 10px;
    background: rgba(0, 0, 0, 0.5);
    border: 1px solid #ffffff72;
    box-shadow:
        0px 4px 20px rgba(0, 0, 0, 0.25),
        inset 0px 3px 10px -25px rgba(255, 255, 255, 0.15),
        inset 0px 2px 10px -100px rgba(255, 255, 255, 0.25);
    box-shadow:
        0px 4px 20px color(display-p3 0 0 0 / 0.25),
        inset 0px 3px 10px -25px color(display-p3 1 1 1 / 0.15),
        inset 0px 2px 10px -100px color(display-p3 1 1 1 / 0.25);
    backdrop-filter: blur(50px);
    border-radius: 20px;
    flex: none;
    order: 0;
    flex-grow: 0;
}

.logo {
    display: flex;
    padding: 0px 15px;
    justify-content: center;
    align-items: center;
    gap: 20px;
    transition: filter 3s;

    &:hover {
        filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
    }
}

.title {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
    color: #fff;
    color: color(display-p3 1 1 1);
    font-family: "Atkinson Hyperlegible";
    font-size: 36px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
    margin: 0px;
}

nav {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    padding: 0px;
    gap: 10px;
    flex: none;
    order: 1;
    align-self: stretch;
    flex-grow: 0;
    overflow: visible;
}

.nav-item {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 10px 20px;
    gap: 10px;
    height: 50px;
    background: linear-gradient(
        to bottom,
        color-mix(in oklab, rgba(0, 0, 0, 0.5), var(--pagecol) 5%),
        color-mix(in oklab, rgba(0, 0, 0, 0.5), var(--pagecol) 2.5%)
    );
    box-shadow: inset 0px 0px 4px 20px
        color-mix(in oklab, rgba(255, 255, 255 0.75), var(--pagecol) 50%);
    border: 1px solid
        color-mix(in oklab, rgba(255, 255, 255, 0.25), var(--pagecol) 10%);
    backdrop-filter: blur(25px);
    border-radius: 148px;
    flex: none;
    order: 4;
    flex-grow: 0;
    font-family: "Atkinson Hyperlegible";
    font-style: normal;
    font-weight: 400;
    font-size: 24px;
    line-height: 30px;
    text-decoration: none;
    color: rgba(255, 255, 255, 0.5);
    transition:
        all 0.4s
            linear(
                0,
                0.49 7.4%,
                0.864 15.3%,
                1.005 19.4%,
                1.12 23.7%,
                1.206 28.1%,
                1.267 32.8%,
                1.296 36.4%,
                1.311 40.2%,
                1.313 44.2%,
                1.301 48.6%,
                1.252 56.9%,
                1.105 74.4%,
                1.048 82.5%,
                1.011 91.1%,
                1
            ),
        scale 0.3s
            linear(
                0,
                0.012 0.9%,
                0.05 2%,
                0.411 9.2%,
                0.517 11.8%,
                0.611 14.6%,
                0.694 17.7%,
                0.765 21.1%,
                0.824 24.8%,
                0.872 28.9%,
                0.91 33.4%,
                0.939 38.4%,
                0.977 50.9%,
                0.994 68.4%,
                1
            );

    nf {
        display: none;
        opacity: 0;
        width: 0px;
        transition: all 0.3s;
    }

    nf.subtle {
        display: block !important;
        font-size: 16px;
        margin-left: -8px;
    }

    &:hover {
        padding: 10px 30px;
        color: #fff;

        nf.subtle {
            display: block !important;
            font-size: 20px;
            color: rgba(255, 255, 255, 0.25);
            opacity: 1;
            width: auto;
            margin-left: 4px;
        }
    }

    &:active {
        scale: 0.9;
    }

    &:focus-visible {
        padding: 10px 20px;
        color: #fff;
        color: color(display-p3 1 1 1 / 1);
        filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
        outline: 2px solid rgba(255, 255, 255, 0.5);

        nf.subtle {
            display: block !important;
            font-size: 20px;
            color: rgba(255, 255, 255, 0.25);
            opacity: 1;
            width: auto;
            margin-left: 4px;
        }
    }
}

.nav-item.selected {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 30px 30px !important;
    gap: 20px;
    background:
        color-mix(in oklab, rgba(0, 0, 0, 0.5), var(--pagecol) 5%),
        linear-gradient(to bottom, transparent, black);
    box-shadow: 0px 0px 50px
        color-mix(in oklab, rgba(255, 255, 255, 0.25), var(--pagecol) 10%);
    backdrop-filter: blur(25px);
    border-radius: 100px;
    flex: none;
    flex-grow: 0;
    color: white;
    font-weight: bold;
    font-size: 36px;

    nf {
        display: block;
        opacity: 1;
        width: auto;
    }
}

footer {
    display: flex;
    flex-direction: column;
    align-items: end;
    width: 255px;
    order: 200;
    gap: 5px;
    padding: 0px 5px;

    a {
        color: rgba(255, 255, 255, 0.5);
        text-decoration: none;

        &:hover {
            text-decoration: var(--pagecol) dotted underline;
            text-underline-offset: 4px;
        }
    }
}

@media screen and (width < 985px) {
    nav {
        margin: 0px;
        padding-left: 0px;
        width: 100%;
        overflow-x: scroll;
        box-sizing: border-box;
        align-items: center;
        flex-direction: row;
        padding-left: 242px;
        padding-right: 12px;
        padding-bottom: 50px;
        padding-top: 50px;
        margin-top: -50px;
    }

    .logo {
        padding: 0px 0px 20px 30px;
    }

    .title {
        font-size: 32px;
    }

    .nav-item {
        font-size: 24px;
        /*padding: 10px !important;*/

        nf {
            scale: 0.8;
        }
    }

    .nav-item.selected {
        font-size: 32px;
    }

    body {
        flex-direction: column;
        padding: 0px;
        margin: 0px;
        max-width: 100vw;
    }

    .sidebar {
        gap: 0px;
        width: 100%;
        overflow-x: hidden;
        padding-right: 0px;
        padding-left: 0px;
        padding-bottom: 0px;
        align-items: start;
    }

    #content {
        margin: 0px 5px 20px;
        width: calc(100vw - 10px);
        p {
            margin: 0px;
            padding: 0px;
            max-width: 100%;
        }
    }

    .scroll {
        margin: -80px;
        padding: 20px;
        width: calc(100% + 110px);
    }
    footer {
        display: none;
    }
}

p {
    color: #fff;
    color: color(display-p3 1 1 1);
    font-family: "Atkinson Hyperlegible";
    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

/* .gamepad-selected {
    padding: 10px 20px;
    color: color(display-p3 1 1 1 / 1);
    filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
    outline: 2px solid rgba(255, 255, 255, 0.5);

    nf.subtle {
        display: block !important;
        font-size: 20px;
        color: rgba(255, 255, 255, 0.25);
        opacity: 1;
    }
} */

.gamepad-overlay {
    position: fixed;
    width: 100vw;
    height: 100vh;
    padding: 50px 75px;
    align-content: baseline;
    justify-content: end;
    align-items: end;
    box-sizing: border-box;
    gap: 4px;
    pointer-events: none;
    z-index: 1000;

    p {
        height: 32px;
        margin: 8px;
        font-weight: 700;
        font-size: 24px;
    }

    > div {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        gap: 10px;
        padding: 4px;
        border-radius: 12px;
        backdrop-filter: blur(16px);
    }
}

.gamepad .gamepad-overlay {
    display: flex !important;
}

button {
    border-radius: 100px;
    background: #fff;
    background: color(display-p3 1 1 1);
    display: flex;
    padding: 10px 20px;
    justify-content: center;
    align-items: center;
    gap: 10px;
    font-size: 18px;
    outline: 0px;
    border: 0px;
    font-family: "Atkinson Hyperlegible";
    transition: all 0.3s ease;
    outline-offset: 1px;

    &:focus-visible {
        padding: 10px 20px;
        color: black;
        filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5));
        outline: 2px solid rgba(255, 255, 255, 0.5);
    }

    &:active {
        scale: 0.9;
    }
}

.center {
    display: flex;
    flex-direction: column;
    gap: 16px;
    justify-content: center !important;
    align-items: center !important;
    text-align: center;
    height: 100%;
    width: 100%;
}

button[onclick^="document.location='https://discord.com/"] {
    background: #5865f2;
    color: #fff;
}

button[onclick^="document.location='https://x.com/"] {
    background: #24a4f2;
    color: #fff;
}

button[onclick^="document.location='https://t.me/"] {
    background: #2eaae9;
    color: #fff;
}

.tile {
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(10px);
    border-radius: 10px;
    border: 1px solid rgba(255, 255, 255, 0.25);
    padding: 20px;
    text-decoration: none;
    width: 100%;

    h1 {
        color: white;
        font-size: 20px;
    }

    p {
        margin: 0px;
    }

    img {
        width: 100%;
        aspect-ratio: 3/1;
    }
}

proj-grid {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    gap: 4px;
}

